--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,12 +20,12 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   
-  <jsp-config>
+  <!-- <jsp-config>
     <jsp-property-group>
       <url-pattern>/WEB-INF/view/*</url-pattern>
        <include-prelude>/common/variable.jspf</include-prelude>
     </jsp-property-group>
-  </jsp-config> 
+  </jsp-config> --> 
   
   
  <filter>
